<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hasil"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hasil_nilai_ujian"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="80dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skor_bahasa_indonesia_70"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skor_bahasa_inggris_78"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skor_matematika_65"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skor_tka_soshum_70"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skor_yang_didapatkan_70_75"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp" />
    <Button
        android:id="@+id/tombol6"
        android:layout_width="119dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center"
        android:text="@string/kembali2"
        android:layout_marginStart="10dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginTop="80dp"
        android:paddingTop="20dp"
        android:background="#008"
        android:gravity="center_horizontal"
        android:text="@string/e_mail_email_univpancasila_ac_id1"
        android:textColor="#2E7D32"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>