<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/universitas_pancasila1"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:text="@string/selamat_datang"
        android:textColor="@color/black"
        android:padding="30dp"
        android:layout_marginTop="250dp"
        android:textSize="20sp"/>
    <RelativeLayout
        android:id="@+id/lyt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:gravity="center">

        <EditText
            android:id="@+id/username"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hlo"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="25dp"
            android:autofillHints="Email"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#757575" />
        <Button
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/showpassword"
            android:layout_marginLeft="160dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/login"/>
        <CheckBox
            android:id="@+id/showpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:text="@string/show_password"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/up"
        android:contentDescription="@drawable/up"
        android:layout_marginStart="110dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginTop="650dp"
        android:background="#008"
        android:gravity="center"
        android:text="E-mail : Email@univpancasila.ac.id"
        android:textColor="#2E7D32"
        android:textSize="15sp"
        android:textStyle="bold" />


</RelativeLayout>
