<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".datadiri"
    tools:ignore="ExtraText"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView
        android:id="@+id/tulisan6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/data_diri_peserta"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:gravity="center"
        />

    <ImageButton
        android:id="@+id/kamera"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/tulisan6"
        android:layout_gravity="center"
        android:layout_marginStart="125dp"
        android:layout_marginLeft="125dp"
        android:contentDescription="@string/menyalakan_kamera"
        android:src="@android:drawable/ic_menu_camera"
        tools:ignore="ImageContrastCheck" />
    <TextView
        android:id="@+id/tulisan1"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="270dp"
        android:layout_marginLeft="20dp"
        android:text="Nomor Pendaftaran : 4519210108"
        android:textSize="15dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tulisan2"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="20dp"
        android:text="Nama : Dian Ayu Lestari"
        android:textSize="15dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tulisan3"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="330dp"
        android:layout_marginLeft="20dp"
        android:text="Tempat Tanggal Lahir : Jakarta,23 Juli 2002"
        android:textSize="15dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tulisan4"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:text="Asal Sekolah : SMA Negeri 5 Jakarta"
        android:layout_marginTop="420dp"
        android:layout_marginLeft="20dp"
        android:textSize="15dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tulisan5"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:text="Alamat : Jalan Duri No9 RT01/06 Kel.Cipondoh, Jakarta"
        android:layout_marginTop="450dp"
        android:layout_marginLeft="20dp"
        android:textSize="15dp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginTop="650dp"
        android:background="#008"
        android:gravity="center"
        android:text="E-Mail : Email@univpancasila.ac.id"
        android:textColor="#2E7D32"
        android:textSize="15dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tulisan7"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:text="Jenis Kelamin : Perempuan"
        android:layout_marginTop="360dp"
        android:layout_marginLeft="20dp"
        android:textSize="15dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tulisan8"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:text="Agama : Islam"
        android:layout_marginTop="390dp"
        android:layout_marginLeft="20dp"
        android:textSize="15dp"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/tombol4"
        android:layout_width="119dp"
        android:layout_height="70dp"
        android:layout_marginTop="500dp"
        android:layout_marginLeft="150dp"
        android:layout_gravity="center"
        android:text="@string/kembali"/>

</RelativeLayout>